--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ asttokens==3.0.0
 async-lru==2.0.5
 attrs==25.4.0
 babel==2.17.0
+bcrypt==5.0.0
 beautifulsoup4==4.14.2
 bleach==6.3.0
 certifi==2025.10.5
@@ -14,6 +15,7 @@ cffi==2.0.0
 charset-normalizer==3.4.4
 comm==0.2.3
 contourpy==1.3.3
+cryptography==46.0.3
 cycler==0.12.1
 debugpy==1.8.17
 decorator==5.2.1
@@ -21,15 +23,19 @@ defusedxml==0.7.1
 dnspython==2.8.0
 executing==2.2.1
 fastjsonschema==2.21.2
+filelock==3.20.0
 fonttools==4.60.1
 fqdn==1.5.1
+fsspec==2025.10.0
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
 idna==3.11
+invoke==2.2.1
 ipykernel==7.1.0
 ipython==9.6.0
 ipython_pygments_lexers==1.1.1
+ipywidgets==8.1.8
 isoduration==20.11.0
 jedi==0.19.2
 Jinja2==3.1.6
@@ -46,6 +52,7 @@ jupyter_server_terminals==0.5.3
 jupyterlab==4.4.10
 jupyterlab_pygments==0.3.0
 jupyterlab_server==2.28.0
+jupyterlab_widgets==3.0.16
 kiwisolver==1.4.9
 lark==1.3.1
 MarkupSafe==3.0.3
@@ -53,16 +60,19 @@ matplotlib==3.10.7
 matplotlib-inline==0.2.1
 mistune==3.1.4
 motor==3.7.1
+mpmath==1.3.0
 nbclient==0.10.2
 nbconvert==7.16.6
 nbformat==5.10.4
 nest-asyncio==1.6.0
+networkx==3.5
 notebook==7.4.7
 notebook_shim==0.2.4
 numpy==2.3.4
 packaging==25.0
 pandas==2.3.3
 pandocfilters==1.5.1
+paramiko==4.0.0
 parso==0.8.5
 pexpect==4.9.0
 pillow==12.0.0
@@ -75,6 +85,8 @@ pure_eval==0.2.3
 pycparser==2.23
 Pygments==2.19.2
 pymongo==4.15.3
+PyMySQL==1.1.2
+PyNaCl==1.6.1
 pyparsing==3.2.5
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
@@ -94,12 +106,18 @@ setuptools==80.9.0
 six==1.17.0
 sniffio==1.3.1
 soupsieve==2.8
+SQLAlchemy==2.0.44
+sshtunnel==0.4.0
 stack-data==0.6.3
+sympy==1.14.0
 terminado==0.18.1
 tinycss2==1.4.0
+torch==2.9.0
+torchvision==0.24.0
 tornado==6.5.2
 tqdm==4.67.1
 traitlets==5.14.3
+ts2vec==0.1
 typing_extensions==4.15.0
 tzdata==2025.2
 uri-template==1.3.0
@@ -108,3 +126,4 @@ wcwidth==0.2.14
 webcolors==24.11.1
 webencodings==0.5.1
 websocket-client==1.9.0
+widgetsnbextension==4.0.15
