--- a/requirements.txt
+++ b/requirements.txt
@@ -39,6 +39,7 @@ ipywidgets==8.1.8
 isoduration==20.11.0
 jedi==0.19.2
 Jinja2==3.1.6
+joblib==1.5.2
 json5==0.12.1
 jsonpointer==3.0.0
 jsonschema==4.25.1
@@ -55,6 +56,7 @@ jupyterlab_server==2.28.0
 jupyterlab_widgets==3.0.16
 kiwisolver==1.4.9
 lark==1.3.1
+lightgbm==4.6.0
 MarkupSafe==3.0.3
 matplotlib==3.10.7
 matplotlib-inline==0.2.1
@@ -100,6 +102,7 @@ rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rfc3987-syntax==1.1.0
 rpds-py==0.28.0
+scikit-learn==1.7.2
 scipy==1.16.3
 Send2Trash==1.8.3
 setuptools==80.9.0
@@ -111,6 +114,7 @@ sshtunnel==0.4.0
 stack-data==0.6.3
 sympy==1.14.0
 terminado==0.18.1
+threadpoolctl==3.6.0
 tinycss2==1.4.0
 torch==2.9.0
 torchvision==0.24.0
